2007-01-19  Keith Seitz  <keiths@redhat.com>

	* gnu/classpath/jdwp/natVMVirtualMachine.cc: Mark unused parameters
	in methods and reformat.

2007-01-18  Keith Seitz  <keiths@redhat.com>

	From Macro Trudel <mtrudel@gmx.ch>:
	* gnu/classpath/jdwp/natVMVirtualMachine.cc (jdwpVMInitCB):
	Use JNICALL.

2007-01-18  Marco Trudel  <mtrudel@gmx.ch>

	* jni.cc (_Jv_JNI_FindClass): Initialize class.
	* testsuite/libjava.jni/findclass2.jar: New file.
	* testsuite/libjava.jni/findclass2.h: New file.
	* testsuite/libjava.jni/findclass2.java: New file
	* testsuite/libjava.jni/findclass2.c: New file.
	* testsuite/libjava.jni/findclass2.out: New file.

2007-01-18  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.ac: Use multi_basedir instead of libgcj_basedir.

2007-01-18  Gary Benson  <gbenson@redhat.com>

	* gnu/java/nio/natVMPipeEcos.cc:
	Renamed from gnu/java/nio/natPipeImplEcos.cc.
	* gnu/java/nio/natVMPipePosix.cc:
	Renamed from gnu/java/nio/natPipeImplPosix.cc.
	* gnu/java/nio/natVMPipeWin32.cc:
	Renamed from gnu/java/nio/natPipeImplWin32.cc.
	* gnu/java/nio/natVMSelectorEcos.cc:
	Renamed from gnu/java/nio/natSelectorImplEcos.cc.
	* gnu/java/nio/natVMSelectorPosix.cc:
	Renamed from gnu/java/nio/natSelectorImplPosix.cc.
	* gnu/java/nio/natVMSelectorWin32.cc:
	Renamed from gnu/java/nio/natSelectorImplWin32.cc.
	* java/io/natVMObjectInputStream.cc:
	Renamed from java/io/natObjectInputStream.cc.
	* java/lang/natVMDouble.cc:
	Renamed from java/lang/natDouble.cc.
	* java/lang/natVMFloat.cc:
	Renamed from java/lang/natFloat.cc.	
	* Makefile.am, configure.ac: Reflect the above.
	* Makefile.in, configure: Rebuilt.

2007-01-17  Andrew Haley  <aph@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (ecjx_LDFLAGS): Pass -fbootclasspath.

2007-01-17  Keith Seitz  <keiths@redhat.com>

	* java/lang/natThread.cc (finish_): Add JVMTI ThreadEnd notification.
	(_Jv_NotifyThreadStart): Add JVMTI ThreadStart notification.
