@@ -3,6 +3,9 @@
 	* gnu/classpath/jdwp/natVMVirtualMachine.cc: Mark unused parameters
 	in methods and reformat.
 
+	* gnu/classpath/jdwp/natVMFrame.cc: Mark unused parameters with
+	MAYBE_UNUSED.
+
 2007-01-18  Keith Seitz  <keiths@redhat.com>
 
 	From Macro Trudel <mtrudel@gmx.ch>:
